# mycalcurse

./: Makefile.in  autogen.sh  configure  configure.ac  install-sh  missing
src/: Makefile.am  Makefile.in  main.cpp  main.h
src/utils/: Makefile.am  Makefile.in  base.cpp  base.h
